--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="container-fluid">
 
 
-    <h1 class="welcome"><a href="#choose" id="welcome">Откройте мир вместе с Tourismatic!</a></h1>
+    <h1 class="welcome"><a href="#choose" id="welcome">Откройте мир вместе с Valik!</a></h1>
 
     <div class="row">
       <nav class="col-lg-12 col-md-12 col-xs-12 navbar navmenu" role="navigation" id="choose">
